feat(core): add pause/unpause endpoint
