# server.py
@@ -17,7 +17,7 @@ from monitorrent.settings_manager import SettingsManager
 from monitorrent.rest import create_api, AuthMiddleware
 from monitorrent.rest.static_file import StaticFiles
 from monitorrent.rest.login import Login, Logout
-from monitorrent.rest.topics import TopicCollection, TopicParse, Topic, TopicResetStatus
+from monitorrent.rest.topics import TopicCollection, TopicParse, Topic, TopicResetStatus, TopicPauseState
 from monitorrent.rest.trackers import TrackerCollection, Tracker, TrackerCheck
 from monitorrent.rest.clients import ClientCollection, Client, ClientCheck, ClientDefault
 from monitorrent.rest.settings_authentication import SettingsAuthentication
@@ -54,6 +54,7 @@ def create_app(secret_key, token, tracker_manager, clients_manager, notifier_man
     app.add_route('/api/topics', TopicCollection(tracker_manager))
     app.add_route('/api/topics/{id}', Topic(tracker_manager))
     app.add_route('/api/topics/{id}/reset_status', TopicResetStatus(tracker_manager))
+    app.add_route('/api/topics/{id}/pause', TopicPauseState(tracker_manager))
     app.add_route('/api/topics/parse', TopicParse(tracker_manager))
     app.add_route('/api/trackers', TrackerCollection(tracker_manager))
     app.add_route('/api/trackers/{tracker}', Tracker(tracker_manager))
